# LangChain_Learning

./: README.md  pyproject.toml
computer_use_agent/: python.py
computer_use_agent/utils/: nodes.py
leran/nodes_control/: README.md  branch.py  conditional_loop.py  frist.py  loop.py  serial.py
leran/precise_control/: README.md  map_reduce.py  running_config.py
